--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=2doParcial
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/semillero
+spring.datasource.url=jdbc:postgresql://localhost:5432/pruebaSegundoParcialA
 spring.datasource.username=postgres
 spring.datasource.password=pastasconleche4*
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 
